bad/div_invalid_types_class_int.example_compiler_output
ERROR
[1mbad/div_invalid_types_class_int.lat:6:4: [1;31merror: [0;1mdivision is defined only for int values, not `X` and `int`[m
	x / 42;
	  [1;32m^[m
